--- a/qr-code-component-main/index.css
+++ b/qr-code-component-main/index.css
@@ -18,9 +18,10 @@
 }
 
 #img{
+    margin-top: 10px;
     border-radius: 15px;
-    width: 350px;
-    height: 350px;
+    width: 310px;
+    height: 300px;
 }
 
 #page-cont{
@@ -37,7 +38,7 @@
     border-radius: 15px;
     padding: 10px;
     box-sizing: border-box;
-    width: 370px;
+    width: 360px;
     display: flex;
     flex-direction: column;
     align-items: center;
