--- a/qr-code-component-main/index.css
+++ b/qr-code-component-main/index.css
@@ -9,6 +9,7 @@
 }
 
 #para{
+    gap: 5px;
     font-family: "Cal Sans", sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -22,6 +23,11 @@
     border-radius: 15px;
     width: 310px;
     height: 300px;
+}
+
+.text{
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 #page-cont{
